Fixed version stuff for the last time i hope